BE: Serde: Impl MM2 serdes (#1381)